--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
     <div class="first"><img id="imgdiv1" src="images/day8.jpg"
         alt="Geeksforgeeks.org"></div>
     <div class="first"><h3>I am really sorry Akka please. At least  brother ga accept in chess only i can't come to play i can't text u..if i cross block me ok na deal Akka Please.Just like fan Boy.Yestarday I seen, you again blocked me in chess 😐.
-    My top 20 Players in chess one of you Didi in Gameplay style.
+    My top 20 Players in chess one of you in Gameplay style.
     </h3></div>
     <div class="first"><img id="imgdiv1" src="images/day9.jpg"
         alt="Geeksforgeeks.org"></div>
     <div class="first"><img id="imgdiv1" src="images/day11.jpg"
         alt="Geeksforgeeks.org"></div>
-        <div class="first"><h3>You are crossing nearly 3k games 😱 i think your are playing bullet games it kills your logic reasoning ability u imagines only  upto 3 premoves by time downing.. practice some more chess tactics,gambits,puzzles.
+        <div class="first"><h3>practice some more chess tactics,gambits,puzzles.
              your intelligent women vi akka nuvvu niku anni telusuntay.</h3></div>
     <div class="first"><img id="imgdiv1" src="images/day12.jpg"
         alt="Geeksforgeeks.org"></div>
