--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
    <div class="container">
-    <h2 id ="head2">Why most chess players are form Tamilnadu ?</h2>
-    <h3 > Akka Just spend 3 minutes 21 seconds here to see yourself please Akka.If you know chess experts show this please 
+    <h2 id ="head2">Why most chess players are from Tamilnadu ?</h2>
+    <h3 > Akka Just spend 3 minutes 21 seconds here to see yourself please Akka.you can show this to chess experts also 
     </h3>
    </div>
    <div class="imageandpara">
@@ -31,9 +31,9 @@
     <div class="first"><img id="imgdiv1" src="images/day1.jpg"
         alt="Geeksforgeeks.org"></div>
     
-    <div class="first"><h3>These all are your games Akka played with me. you don't know there is a number  of games in my archives.This is the largest chess platform. 
+    <div class="first"><h3>These all are your games Akka played with me.There is a number  of games in my archives.This is the largest chess platform. 
         You didn't see my playing & how I analyze.If you know <span> GMs or Hikaru Nakamura </span> 
-        u understand these images. At playing I marks upto 9-10 combinational premoves But u are different  moves didi you are perfect at Position play,middle and end games gambits unless if blunders and mistakes.you have to some more chess tactics.
+        u can understand these images. At playing I marks upto 9-10 combinational premoves But u are different  moves didi you are perfect at Position play,middle and end games gambits unless if blunders and mistakes.you have to some more chess tactics.
         My analysis at past your at <span> 1570 Ello  </span> above at Rapid game.</h3></div>
     <div class="first"><img id="imgdiv1" src="images/day10.jpg"
         alt="Geeksforgeeks.org"></div>
@@ -67,11 +67,12 @@
         <div class="gukeshdiv"><img class="gukesh" src="https://ss-i.thgim.com/public/incoming/td73ou/article68092241.ece/alternates/LANDSCAPE_1200/53669703265_4f39d05403_o.jpg" alt="gukesh"></div>
 
         <div class="gukeshdiv"><img class="gukesh" src="https://i.ytimg.com/vi/He0zTyjHqBE/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDA3GULfrEm_owr7uiMEv7-z-FDHg" alt="divya"></div>
-        <div class="first"><h3>Actually by deleting your number it pressed if you get call sorry for that Akka  .I deleted u r number. It happend 30 days back</h3></div>
+        <div class="first"><h3>Actually by deleting your number it pressed if you get call sorry for that Akka.I deleted u r number. It happend 30 days back</h3></div>
     </div>
     <div class="first"><img id="imgdiv1" src="images/day8.jpg"
         alt="Geeksforgeeks.org"></div>
-    <div class="first"><h3>I am really sorry Akka please. At least  brother ga accept in chess only i can't come to play i can't text u..if i cross block me ok na deal Akka Please.
+    <div class="first"><h3>I am really sorry Akka please. At least  brother ga accept in chess only i can't come to play i can't text u..
+        if i cross block me ok na deal Akka Please.
         for Network.Yestarday I seen, you again blocked me in chess 😐.
     My top 20 Players in chess one of you in Gameplay style.
     </h3></div>
@@ -84,11 +85,11 @@
     <div class="first"><img id="imgdiv1" src="images/day12.jpg"
         alt="Geeksforgeeks.org"></div>
     <div class="first"><h3> Your are now at <span> 1131 rating Grade B </span> Akka </h3> </div>
-    <div id="rakhi"> HAPPY RAKSHABANDHAN DIDI </div>
+    <div id="rakhi"> HAPPY RAKSHABANDHAN Akka </div>
     <div class="first"><p>
         If you want 140+ games of yours i will update in this website.</p></div>
     <div class="first"><p>Sorry for mentioning your name Akka 
-        I Paid premium for this webhosting Akka if you read,atleast reply ma .</p></div>
+        I Paid premium for this webhosting Akka if you read,atleast reply.</p></div>
    </div>
    
    
