--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
    <div class="container">
     <h2 id ="head2">Chess Player Mona Shree.</h2>
-    <h3 > Akka Listen this all about you sister.
+    <h3 > I Doesn't know how to say professional ga but satyama solran da.
     </h3>
    </div>
    <div class="imageandpara">
@@ -78,13 +78,14 @@
         alt="Geeksforgeeks.org"></div>
     <div class="first"><img id="imgdiv1" src="images/day11.jpg"
         alt="Geeksforgeeks.org"></div>
-        <div class="first"><h3>Nuvvu Intelligent Women vi So I can Help you at any please belive chey .</h3></div>
-    <div class="first"><img id="imgdiv1" src="images/day12.jpg"
+        <div class="first"><h3>Nuvvu Intelligent Women vi.</h3></div>
+        <div class="first"><img id="imgdiv1" src="images/day12.jpg"
+            alt="Geeksforgeeks.org"></div>
+        <div class="first"><img id="imgdiv1" src="images/vijay.jpg"
         alt="Geeksforgeeks.org"></div>
-    <div class="first"><h3> Your are now at <span> 1131 rating Grade B </span> Akka </h3> </div>
+        <div class="first"><h3> Your are now at <span> 1131 rating Grade B </span> Akka </h3> </div>
     <div class="first"><p>
-        If you want 140+ games of yours i will update in this website.</p></div>
-
+        If you want 140+ games of yours played with me, i will update in this website.</p></div>
     <div class="first"><p>Sorry for mentioning your name Akka 
         I Paid premium for this webhosting Akka if you read,atleast reply.</p></div>
    </div>
